--- a/src/content/index.html
+++ b/src/content/index.html
@@ -185,9 +185,11 @@
                     </p>
                     <p class="section__paragraph">
                         HTML składa się ze znaczników, przykładowy znacznik znajduje się poniżej </p>
-                    <code class="section__code">
+                    <pre class="data-pre data-pre--white-space">
+                        <code class="language-html section__code">
                         &lt;znacznik atrybut=&quot;wartość&quot;&gt;treść&lt;/znacznik&gt;
                     </code>
+                    </pre>
                     <p class="section__paragraph">
                         Dokumentację HTML, czyli opis wszystkich znaczników znajdziesz na stronie
                         <a class="section__link" href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web
@@ -203,12 +205,13 @@
                     <p class="section__paragraph">CSS odpowiadają za prezentację treści, czyli za wygląd strony na
                         ekranie,
                         wydrukach itp.</p>
-                    <p class="section__paragraph">Składnia CSS - reguły <br>
-                        <code class="section__code">selektor {<br>
-                            właściwość: wartość;<br>
+                    <p class="section__paragraph"><strong>Składnia CSS - reguły:</strong> </p>
+                    <pre class="data-pre data-pre--white-space">
+                        <code class="language-css section__code">selektor {
+                            właściwość: wartość;
                             }
                         </code>
-                    </p>
+                    </pre>
                     <p class="section__paragraph">
                         Dokumentację CSS znajdziesz na stronie
                         <a class="section__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS">MDN Web
