--- a/src/content/second.html
+++ b/src/content/second.html
@@ -207,10 +207,11 @@
                         podkreślenia
                         wypowiedzi</p>
                     <p class="section__paragraph">&lt;a&gt;...&lt;/a&gt; - linki, łącza wewnątrz dokumentu</p>
-                    <code class="section__code">&lt;a href="ścieżka docelowej treści" target=""&gt;opis
-                        łącza&lt;/a&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;a href="ścieżka docelowej treści" target=""&gt;opis łącza&lt;/a&gt;</code> </pre>
                     <p class="section__paragraph">atrybut id - identyfikuje element</p>
-                    <code class="section__code">&lt;element id="moj-identyfikator"&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;element id="moj-identyfikator"&gt;</code></pre>
                     <p class="section__paragraph">&lt;br&gt; - przejście do nowej lini</p>
                     <p class="section__paragraph">&lt;img src="ścieżka do obrazka" alt="opis co przedstawia
                         obrazek"&gt;
@@ -240,10 +241,11 @@
                         ponieważ przy większym
                         projekcie można się pogubić oraz mieć problemy z odpowiednim wyszukaniem, doborem selektora.
                     </p>
-                    <code class="section__code">main section article p {<br>
-                        właściwość: wartość;<br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">main section article p {
+                        właściwość: wartość;
                         }
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Stylowanie za pomocą klas - jest to zalecana metoda. Nazewnictwo
                         klas
                         stosujemy w języku
@@ -262,17 +264,19 @@
                             <li>staraj się, żeby element miał jedną klasę</li>
                         </ul>
                     </section>
-                    <code class="section__code">&lt;znacznik class="name'&gt;treść&lt;/znacznik&gt;<br>.name
-                        {<br>właściwość:
-                        wartość;<br>}</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-css section__code">&lt;znacznik class="name'&gt;treść&lt;/znacznik&gt;
+
+                        .name {
+                            właściwość: wartość;
+                        }</code></pre>
                     <p class="section__paragraph">Styl przy znaczniku HTML z wykorzystaniem atrybutu "style" - takie
                         stylowanie nie jest dobrą
                         praktyką.</p>
-                    <code class="section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-html section__code">&lt;znacznik style="color:blue;"&gt;treść&lt;/znacznik&gt;</code></pre>
                     <p class="section__paragraph">Styl w znaczniku "style"- z takim stylowaniem możemy się spotkać,
-                        jednak
-                        najczęściej najlepszym
-                        wyborem jest używanie stylów w osobnym pliku "style.css".</p>
+                        jednak najczęściej najlepszym wyborem jest używanie stylów w osobnym pliku "style.css".</p>
                     <img class="image" src="img/style-markup.webp" alt="przykład stylów w znaczniku style">
                     <p class="section__paragraph section__paragraph--position">Style osadzone w zanczniku "style".
                     </p>
@@ -336,15 +340,14 @@
                         ale podobnie jak style można załączać je w znaczniku <strong> &lt;script&gt;</strong> </p>
                     <section class="card">
                         <h4 class="card__header">Pierwszy kod</h4>
-                        <code class="card__code">alert('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim
-                            zapisną!!!');</code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js card__code">alert('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim zapisną!!!');</code></pre>
                     </section>
                     <p class="section__paragraph">
                         Funkcja console.log jest twoim przyjacielem. Często będziesz tą funkcję
                         wykorzystywał/wykorzystywała jako pomocy przy tworzeniu kodu. <br>
-                        <code class="section__code">console.log('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w
-                            nim
-                            zapisną!!!');</code>
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-js section__code">console.log('Witaj w moim notatniku, śmiało wchłaniaj wiedzę w nim zapisną!!!');</code></pre>
                     </p>
                     <p class="section__paragraph">Zmienna to takie pudełko do przechowywania różnych danych</p>
                     <p class="section__paragraph">Zmienne definiujemy za pomocą słów kluczowych var, let i const.
