--- a/src/content/sixth.html
+++ b/src/content/sixth.html
@@ -157,41 +157,46 @@
                     <p class="section__paragraph">klucz - musi być unikalny w ramach obiektu</p>
                     <p class="section__paragraph">wartość - prymitywy / funkcje / zagnieżdżenia</p>
                     <p class="ection__paragraph">Dot notation - notacja kropkowa:</p>
-                    <code class="section__code">const deathStar = { <br>
-                        diameter: 120000, <br>
-                        fire: (target) => { <br>
-                        console.log(`${target} destroyed 💥`) <br>
-                        }, <br>
-                        isOperating: true, <br>
-                        levels: 357, <br>
-                        name: 'Death Star', <br>
-                        population: 10000, <br>
-                        } <br> <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">const deathStar = {
+                        diameter: 120000,
+                        fire: (target) => {
+                        console.log(`${target} destroyed 💥`)
+                        },
+                        isOperating: true,
+                        levels: 357,
+                        name: 'Death Star',
+                        population: 10000,
+                        }
+
                         deathStar.population
-                    </code>
+                    </code></pre>
                     <p class="section__paragraph">Bracket notation - notacja nawiasów:</p>
-                    <code class="section__code">const deathStar = { <br>
-                        diameter: 120000, <br>
-                        fire: (target) => { <br>
-                        console.log(`${target} destroyed 💥`) <br>
-                        }, <br>
-                        isOperating: true, <br>
-                        levels: 357, <br>
-                        name: 'Death Star', <br>
-                        population: 10000, <br>
-                        } <br> <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">const deathStar = {
+                        diameter: 120000,
+                        fire: (target) => {
+                        console.log(`${target} destroyed 💥`)
+                        },
+                        isOperating: true,
+                        levels: 357,
+                        name: 'Death Star', 
+                        population: 10000, 
+                        }
+
                         deathStar["population"]
-                    </code>
+                    </code></pre>
                     <p class="section__paragrap">JSON = JavaScript Object Notation, uniwersalny format wymiany danych.
                     </p>
-                    <code class="section__code">{ <br>
-                        "diameter": 120000, <br>
-                        "isOperating": true, <br>
-                        "levels": 357, <br>
-                        "name": "Death Star", <br>
-                        "population": 10000, <br>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-js section__code">{
+                        "diameter": 120000,
+                        "isOperating": true,
+                        "levels": 357,
+                        "name": "Death Star",
+                        "population": 10000,
                         }
-                    </code>
+                    </code></pre>
                 </section>
                 <section class="section" id="pseudo">
                     <h3 class="section__header">Pseudoelementy</h3>
@@ -268,7 +273,8 @@
                 <section class="section" id="starter">
                     <h3 class="section__header">WTF GULP STARTER KIT</h3>
                     <p class="section__paragrap">Pobranie WTF GULP STARTER KIT:</p>
-                    <code class="section__code">git clone https://github.com/maciejkorsan/wtf-gulp-starter</code>
+                    <pre class="data-pre data-pre--white-space">
+                    <code class="language-shell section__code">git clone https://github.com/maciejkorsan/wtf-gulp-starter</code></pre>
                     <p class="section__paragarph">Gulp - task runner, służy do automatyzacji zadań w projekcie.</p>
                     <a href="https://gulpjs.com" class="section__link">https://gulpjs.com</a>
                     <p class="section__paragraph"><strong>npm install gulp-cli --global</strong> - instalacja gulpa
