--- a/src/content/third.html
+++ b/src/content/third.html
@@ -218,7 +218,8 @@
                         <p class="card__paragraph">Niektóre właściwości posiadają zapis pełny oraz skrócony
                             (shorthand).
                         </p>
-                        <code class="card__code">
+                        <pre class="data-pre data-pre--white-space">
+                        <code class="language-css card__code">
                             padding-top: 5px; <br>
                             padding-right: 5px; <br>
                             padding-bottom: 5px; <br>
@@ -226,7 +227,7 @@
                             padding: 5px 5px 5px 5px; - pełny zapis <br><br>
                             padding: top right bottom left; <br><br>
                             padding: 5px; - zapis skrócony
-                        </code>
+                        </code></pre>
                     </section>
                     <section class="card">
                         <h4 class="card__header">Jednostki</h4>
@@ -285,11 +286,14 @@
                         </ul>
                         <p class="card__paragraph">Modyfikacja treści</p>
                         <ul class="card__list">
-                            <li>innerHTML - zwraca treść bez HTML <br> <code class="card__code">const content =
-                                    document.querySelector('p'); <br><br>console.log(content.innerHTML);</code></li>
-                            <li>innerHTML = 'treść' - modyfikuję treść, elementy HTML<br> <code class="card__code">const
-                                    content = document.querySelector('p'); <br><br>content.innerHTML =
-                                    '&lt;strong&gt;nowa&lt;/strong&gt;treść';</code></li>
+                            <li>innerHTML - zwraca treść bez HTML <br>
+                                <pre class="data-pre data-pre--white-space"><code class="language-js card__code">const content = document.querySelector('p');
+                                    console.log(content.innerHTML);</code></pre>
+                            </li>
+                            <li>innerHTML = 'treść' - modyfikuję treść, elementy HTML<br>
+                                <pre class="data-pre data-pre--white-space"><code class="language-js card__code">const content = document.querySelector('p'); 
+                                    content.innerHTML ='&lt;strong&gt;nowa&lt;/strong&gt;treść';</code></pre>
+                            </li>
                         </ul>
                     </section>
                 </section>
