--- a/src/content/fifth.html
+++ b/src/content/fifth.html
@@ -24,8 +24,8 @@
                 miejsce jest moim cyfrowym notatnikiem. </p>
         </section>
         <ul class="menu__list">
-            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">pierwszy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="index.html"><strong class="strong__header">rozdział
+                        pierwszy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Warstwy</li>
                         <li class="menu__item">HTML</li>
@@ -33,8 +33,8 @@
                         <li class="menu__item">Programowanie</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">drugi
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="second.html"><strong class="strong__header">rozdział
+                        drugi</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Organizacja nauki/pracy</li>
                         <li class="menu__item">HTML - znaczniki i atrybuty</li>
@@ -44,8 +44,8 @@
                         <li class="menu__item">Terminal</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">trzeci
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="third.html"><strong class="strong__header">rozdział
+                        trzeci</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Git</li>
                         <li class="menu__item">Box model</li>
@@ -53,8 +53,8 @@
                         <li class="menu__item">DOM</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">czwarty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fourth.html"><strong class="strong__header">rozdział
+                        czwarty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">JavaScript</li>
                         <li class="menu__item">Funkcja w JS</li>
@@ -65,8 +65,8 @@
                         <li class="menu__item">Tło</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">piąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="fifth.html"><strong class="strong__header">rozdział
+                        piąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Formularze</li>
                         <li class="menu__item">Grid</li>
@@ -75,8 +75,8 @@
                         <li class="menu__item">Hamburger</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">szósty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="sixth.html"><strong class="strong__header">rozdział
+                        szósty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Obiekty</li>
                         <li class="menu__item">Pseudo*</li>
@@ -85,8 +85,8 @@
                         <li class="menu__item">Starter kit</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">siódmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="seventh.html"><strong class="strong__header">rozdział
+                        siódmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Prefiksy</li>
                         <li class="menu__item">Google fonts</li>
@@ -97,8 +97,8 @@
                         <li class="menu__item">Dane</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">ósmy
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="eight.html"><strong class="strong__header">rozdział
+                        ósmy</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Przejścia</li>
                         <li class="menu__item">Animacje</li>
@@ -108,8 +108,8 @@
                         <li class="menu__item">PWA</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">dziewiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="ninth.html"><strong class="strong__header">rozdział
+                        dziewiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">API</li>
                         <li class="menu__item">CSS</li>
@@ -117,16 +117,18 @@
                         <li class="menu__item">Typografia</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">dziesiąty
-                        tydzień</strong>
+            <li class="menu__item"><a class="menu__link" href="tenth.html"><strong class="strong__header">rozdział
+                        dziesiąty</strong>
                     <ul class="menu__description">
                         <li class="menu__item">Multimedia</li>
                         <li class="menu__item">Bootstrap</li>
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">jedenasty
-                        tydzień</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">Dev
+                        tools</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">Dev
+                        game</strong></a></li>
         </ul>
     </nav>
     <main class="main">
@@ -147,7 +149,7 @@
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Piąty tydzień nauki</h2>
+            <h2 class="article__header">Rozdział piąty</h2>
             <div class="wrapper">
                 <section class="section" id="form">
                     <h3 class="section__header">Formularze</h3>
