feat: update main menu

--- a/src/content/fifth.html
+++ b/src/content/fifth.html
@@ -125,10 +125,26 @@
                         <li class="menu__item">Kombinatory</li>
                     </ul>
                 </a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">Dev
-                        tools</strong></a></li>
-            <li class="menu__item"><a class="menu__link" href="eleventh.html"><strong class="strong__header">Dev
-                        game</strong></a></li>
+            <li class="menu__item"><a class="menu__link" href="dev-tools.html"><strong class="strong__header">Dev
+                        tools</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">Do poczytania</li>
+                        <li class="menu__item">Dokumentacja</li>
+                        <li class="menu__item">Narzędzia</li>
+                        <li class="menu__item">Do obejrzenia</li>
+                        <li class="menu__item">Lista frontendu</li>
+                    </ul>
+                </a></li>
+            <li class="menu__item"><a class="menu__link" href="game.html"><strong class="strong__header">Dev
+                        game</strong>
+                    <ul class="menu__description">
+                        <li class="menu__item">CODE COMBAT</li>
+                        <li class="menu__item">CSS Diner</li>
+                        <li class="menu__item">Flexbox Froggy</li>
+                        <li class="menu__item">Grid Garden</li>
+                        <li class="menu__item">Codewars</li>
+                    </ul>
+                </a></li>
         </ul>
     </nav>
     <main class="main">
