--- a/src/content/game.html
+++ b/src/content/game.html
@@ -156,102 +156,22 @@
             <header class="article__nav">
                 <nav class="article__menu">
                     <ul class="article__list">
-                        <li class="article__item"><a class="article__link" href="#layer">Warstwy</a></li>
-                        <li class="article__item"><a class="article__link" href="#html">HTML</a></li>
-                        <li class="article__item"><a class="article__link" href="#css">CSS</a></li>
-                        <li class="article__item"><a class="article__link" href="#programming">Programowanie</a></li>
+                        <li class="article__item"><a class="article__link" href="#read">CODE COMBAT</a></li>
+                        <li class="article__item"><a class="article__link" href="#doc">CSS Diner</a></li>
+                        <li class="article__item"><a class="article__link" href="#tools">Flexbox Froggy</a></li>
+                        <li class="article__item"><a class="article__link" href="#watch">Grid Garden</a></li>
+                        <li class="article__item"><a class="article__link" href="#list">Codewars</a></li>
                     </ul>
                 </nav>
             </header>
-            <h2 class="article__header">Rozdział pierwszy</h2>
-            <header class="article_hero">
-                <p class="article__paragraph">W notatniku znajduje się dwanaście tygodni intensywnej nauki podzielonej
-                    na rozdziały.</p>
-            </header>
-
+            <h2 class="article__header">Dev tools</h2>
             <div class="wrapper">
-                <section class="section" id="layer">
-                    <h3 class="section__header">Warstwy</h3>
-                    <p class="section__paragraph">Każda strona składa się z warstw. Odliczając od zera, możemy wyróżnić
-                        trzy
-                        warstwy. </p>
-                    <ul class="section__list">
-                        <li>warstwa 0 - treść</li>
-                        <li>warstwa 1 - HTML (semantyka HTML)</li>
-                        <li>warstwa 2 - style CSS</li>
-                        <li>warstwa 3 - JavaScript</li>
-                    </ul>
-                    <p class="section__paragraph"> Treść stron jest najważniejsza. Bez treści stron by nie było. <br>
-                        HTML poprzez znaczniki nadaje sens treści. <br>
-                        CSS nadaje wygląd stronie. <br>
-                        Język JavaScript, za pomocą którego tworzymy interakcje na stronie.
-                    </p>
-                </section>
-                <section class="section" id="html">
-                    <h3 class="section__header">HTML - HyperText Markup Language</h3>
-                    <p class="section__paragraph">HTML to język znaczników odpowiedzialny za właściwe opakowanie treści.
-                    </p>
-                    <p class="section__paragraph">Semantyczny HTML jest wtedy, gdy napisany jest w sposób
-                        przedstawiający
-                        jakieś znaczenie dla
-                        przeglądarki oraz czytników ekranowych.
-                    </p>
-                    <p class="section__paragraph">
-                        Fundamentem każdej strony jest treść. Treścią na stronie są tekst, nagłówki, linki, listy,
-                        definicje, obrazki, video, audio, formularze, czyli wszystko, co jest nośnikiem informacji.
-                    </p>
-                    <p class="section__paragraph">
-                        HTML składa się ze znaczników, przykładowy znacznik znajduje się poniżej </p>
-                    <pre class="data-pre data-pre--white-space">
-                        <code class="language-html section__code">
-                        &lt;znacznik atrybut=&quot;wartość&quot;&gt;treść&lt;/znacznik&gt;
-                    </code>
-                    </pre>
-                    <p class="section__paragraph">
-                        Dokumentację HTML, czyli opis wszystkich znaczników znajdziesz na stronie
-                        <a class="section__link" href="https://developer.mozilla.org/en-US/docs/Web/HTML">MDN Web
-                            Docs</a>
-                    </p>
-                </section>
-                <section class="section" id="css">
-                    <h3 class="section__header">CSS - Kaskadowe arkusze stylów (Cascading Style Sheets)</h3>
-                    <p class="section__paragraph">W języku polskim styl w liczbie mnogiej to stylów nie styli.
-                        Zapamiętaj
-                        to
-                        sobie!</p>
-                    <p class="section__paragraph">CSS odpowiadają za prezentację treści, czyli za wygląd strony na
-                        ekranie,
-                        wydrukach itp.</p>
-                    <p class="section__paragraph"><strong>Składnia CSS - reguły:</strong> </p>
-                    <pre class="data-pre data-pre--white-space">
-                        <code class="language-css section__code">selektor {
-                            właściwość: wartość;
-                            }
-                        </code>
-                    </pre>
-                    <p class="section__paragraph">
-                        Dokumentację CSS znajdziesz na stronie
-                        <a class="section__link" href="https://developer.mozilla.org/en-US/docs/Web/CSS">MDN Web
-                            Docs</a>
-                    </p>
-                </section>
-                <section class="section" id="programming">
-                    <h3 class="section__header">Programowanie</h3>
-                    <p class="section__paragraph">Programowanie jest to zamiana ludzkiego języka na język zrozumiały
-                        przez
-                        komputer.</p>
-                    <p class="section__paragraph">Na świecie istnieje bardzo dużo języków programowania. Ja uczę się
-                        języka
-                        JavaScript, jest to
-                        najbardziej popularny język wykorzystywany do frontendu.</p>
-                    <p class="section__paragraph">Do frontendu JavaScript jest używany przy modyfikowaniu treści, HTML,
-                        stylów dodatkowo dając im
-                        możliwość jakiejś interakcji. Te zmiany dokonywane są w obszarze DOM (Document Object Model).
-                    </p>
+                <section class="section" id="multimedia">
+                    <h3 class="section__header">Multimedia</h3>
+
                 </section>
             </div>
         </article>
-
     </main>
     <footer class="footer">
         <p class="footer__paragraph">Projekt stworzony przez Andrzeja</p>
